fix(lynx): wrong help urls

--- a/home/private_dot_config/lynx/lynx.cfg
+++ b/home/private_dot_config/lynx/lynx.cfg
@@ -127,14 +127,12 @@ STARTFILE:https://duckduckgo.com/lite
 #   for this distribution (use SHELL syntax including the device
 #   on VMS systems).
 # The default HELPFILE is:
-# .url https://lynx.invisible-island.net/lynx_help/lynx_help_main.html
-.url https://duckduckgo.com/lite
+.url https://lynx.invisible-island.net/lynx_help/lynx_help_main.html
 #   This should be changed to the local path.
 # This definition will be overridden if the "LYNX_HELPFILE" environment
 # variable has been set.
 #
-# HELPFILE:https://lynx.invisible-island.net/lynx_help/lynx_help_main.html
-HELPFILE:https://duckduckgo.com/lite
+HELPFILE:https://lynx.invisible-island.net/lynx_help/lynx_help_main.html
 .ex
 #HELPFILE:file://localhost/PATH_TO/lynx_help/lynx_help_main.html
 
@@ -3810,7 +3808,7 @@ SYSLOG_REQUESTED_URLS:FALSE
 # This is different from URL_DOMAIN_PREFIXES and URL_DOMAIN_SUFFIXES.
 #
 # If no "scheme" (such as "http:", "ftp:") is given in a URI, Lynx first checks
-# if there is a corresponding local file which can be accessed directly. 
+# if there is a corresponding local file which can be accessed directly.
 # Failing that, Lynx may inspect the URI to see if it begins with a prefix
 # which implies a scheme.
 #
