--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -84,46 +84,71 @@ bind t run-shell tmux-side
 
 # ----------------------------------------------------------------------
 # --- Theme and status line
-foreground="#d9e0ee"
-black4="#575268"
-black1="#181825"
-gray="#332e41"
-green="#b1e3ad"
+base="#1e1e2e"
+mantle="#181825"
+crust="#11111b"
+
+text="#cdd6f4"
+subtext0="#a6adc8"
+subtext1="#bac2de"
+
+surface0="#313244"
+surface1="#45475a"
+surface2="#585b70"
+
+overlay0="#6c7086"
+overlay1="#7f849c"
+overlay2="#9399b2"
+
+blue="#89b4fa"
+lavender="#b4befe"
+sapphire="#74c7ec"
+sky="#89dceb"
+teal="#94e2d5"
+green="#a6e3a1"
+yellow="#f9e2af"
+peach="#fab387"
+maroon="#eba0ac"
+red="#f38ba8"
+mauve="#cba6f7"
+pink="#f5c2e7"
+flamingo="#f2cdcd"
+rosewater="#f5e0dc"
 
 # Status
 set -g status "on"
 set -g status-interval 1
 set -g status-justify left
 set -g status-position top
-set -g status-style bg="${black1}",fg="${foreground}"
+set -g status-style bg="${mantle}",fg="${text}"
 
 # Left status bar
 set -g status-left ""
 # set -g status-left " #S ❯ "
-set -g status-left-style bg="${gray}",fg="${foreground}"
+set -g status-left-style bg="${surface2}",fg="${text}"
 set -g status-left-length "100"
 
 # Right status bar
 set -g status-right "#(pomo) %A, %B %-e, %Y, %-l:%M:%S%p %Z "
-set -g status-right-style bg="${black1}",fg="${foreground}"
+set -g status-right-style bg="${mantle}",fg="${text}"
 set -g status-right-length "100"
 
 # Modes
-setw -g mode-style bg="${black4}",fg="${green}"
+setw -g mode-style bg="${surface2}",fg="${green}"
 setw -g clock-mode-colour "${green}"
 
 # Panes
-set -g pane-border-style bg="${black1}",fg="${black1}"
-set -g pane-active-border-style bg="${black1}",fg="${black1}"
+set -g pane-border-style bg="${mantle}",fg="${mantle}"
+set -g pane-active-border-style bg="${mantle}",fg="${mantle}"
 
 # Messages
-set -g message-style bg="${gray}",fg="${green}",align="centre"
-set -g message-command-style bg="${gray}",fg="${green}",align="centre"
+set -g message-style bg="${surface2}",fg="${green}",align="centre"
+set -g message-command-style bg="${surface2}",fg="${green}",align="centre"
 
 # Windows
 setw -g window-status-separator ""
 setw -g window-status-format " #{b:pane_current_path} "
 setw -g window-status-current-format " #{b:pane_current_path} "
-setw -g window-status-style bg="${black1}",fg="${black4}"
-setw -g window-status-current-style bg="${gray}",fg="${foreground}"
-setw -g window-status-activity-style bg="${black1}",fg="${foreground}"
+setw -g window-status-style bg="${mantle}",fg="${surface2}"
+setw -g window-status-current-style bg="${blue}",fg="${mantle}"
+setw -g window-status-activity-style bg="${mantle}",fg="${text}"
