--- a/home/private_dot_config/alacritty/alacritty.yml
+++ b/home/private_dot_config/alacritty/alacritty.yml
@@ -29,6 +29,19 @@ key_bindings:
   - { key: Return, mods: Control, action: ToggleFullscreen }
 
 font:
+  size: 10.0
   normal:
-    family: Hack Nerd Font
-  size: 10
+    family: monospace
+    style: Regular
+  bold:
+    style: Bold
+  italic:
+    style: Italic
+  bold_italic:
+    style: Bold Italic
+  offset:
+    x: 0
+    y: 0
+  glyph_offset:
+    x: 0
+    y: 0
