--- a/home/private_dot_config/waybar/config
+++ b/home/private_dot_config/waybar/config
@@ -1,61 +1,60 @@
 {
     "layer": "top",
     "position": "bottom",
-    "height": 10,
+    // "height": 10,
     "spacing": 4,
     "modules-left": [
         "sway/workspaces",
         "sway/mode",
         "sway/scratchpad",
-        "custom/media"
     ],
     "modules-center": [
         "sway/window"
     ],
     "modules-right": [
-        // "mpd",
-        // "idle_inhibitor",
+        "tray",
         "pulseaudio",
-        "network",
+        // "idle_inhibitor",
         // "cpu",
         // "memory",
         // "temperature",
         // "backlight",
-        // "keyboard-state",
         // "sway/language",
         "battery",
-        // "battery#bat2",
-        "clock",
-        "tray"
+        "network",
+        "custom/clock",
     ],
+
     // Modules configuration
-    // "sway/workspaces": {
-    //     "disable-scroll": true,
-    //     "all-outputs": true,
-    //     "format": "{name}: {icon}",
-    //     "format-icons": {
-    //         "1": "",
-    //         "2": "",
-    //         "3": "",
-    //         "4": "",
-    //         "5": "",
-    //         "urgent": "",
-    //         "focused": "",
-    //         "default": ""
-    //     }
-    // },
-    "keyboard-state": {
-        "numlock": true,
-        "capslock": true,
-        "format": "{name} {icon}",
+    "sway/workspaces": {
+        "disable-scroll": true,
+        "all-outputs": true,
+        "format": "{name}: {icon}",
         "format-icons": {
-            "locked": "",
-            "unlocked": ""
+            "1": "󰞷",
+            "2": "",
+            "3": "󰒱",
+            "4": "󰈹",
+            "5": "󰙯",
+            "urgent": "",
+            "focused": "",
+            "default": ""
+        }
+    },
+    "sway/window": {
+        "format": "{}",
+        "max-length": 50,
+        "rewrite": {
+            "": "󰋜  ",
+            "[0-9]:[0-9]:(.*) -.*": "󰞷  $1",
+            "(.*) — Mozilla Firefox": "󰈹  $1",
+            "Mozilla Firefox": "󰈹  Firefox",
+            "Alacritty": "󰞷  Terminal",
+            "Foot": "󰞷  Terminal",
         }
     },
     "sway/mode": {
-        // "format": "<span style=\"italic\">{}</span>"
-        "format": "{}"
+        "format": " {}"
     },
     "sway/scratchpad": {
         "format": "{icon} {count}",
@@ -67,31 +66,75 @@
         "tooltip": true,
         "tooltip-format": "{app}: {title}"
     },
-    "mpd": {
-        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-        "format-disconnected": "Disconnected ",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-        "unknown-tag": "N/A",
-        "interval": 2,
-        "consume-icons": {
-            "on": " "
+
+    "custom/clock": {
+        "exec": "echo 󱑎 $(date +'%-l:%M %p')",
+        "interval": 5
+    },
+
+    "network": {
+        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        // "format-wifi": "{essid} ({signalStrength}%)  ",
+        "format-wifi": "󰖩",
+        "format-ethernet": "{ipaddr}/{cidr} ",
+        "tooltip-format": "{ifname} via {gwaddr} ",
+        "format-linked": "{ifname} (No IP) ",
+        "format-disconnected": "Disconnected ⚠",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+    },
+    "pulseaudio": {
+        // "scroll-step": 1, // %, can be a float
+        "format": "{format_source} {volume}% {icon}",
+        "format-bluetooth": "{volume}% {icon} {format_source}",
+        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-muted": " {format_source}",
+        "format-source": "",
+        "format-source-muted": "  ",
+        "format-icons": {
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": [
+                "",
+                "",
+                ""
+            ]
         },
-        "random-icons": {
-            "off": "<span color=\"#f53c3c\"></span> ",
-            "on": " "
+        "on-click": "pavucontrol"
+    },
+    "battery": {
+        "full-at": 95,
+        "states": {
+            "good": 95,
+            "warning": 30,
+            "critical": 15
         },
-        "repeat-icons": {
-            "on": " "
-        },
-        "single-icons": {
-            "on": "1 "
-        },
-        "state-icons": {
-            "paused": "",
-            "playing": ""
-        },
-        "tooltip-format": "MPD (connected)",
-        "tooltip-format-disconnected": "MPD (disconnected)"
+        "format": "{capacity}% {icon}",
+        "format-charging": "{capacity}% 󰢝",
+        "format-plugged": "{capacity}% 󰚥",
+        "format-alt": "{time} {icon}",
+        // "format-good": "", // An empty format will hide the module
+        "format-full": "",
+        "format-icons": [
+            "󰁺",
+            "󰁻",
+            "󰁼",
+            "󰁽",
+            "󰁾",
+            "󰁿",
+            "󰂀",
+            "󰂁",
+            "󰂂",
+            "󰁹"
+        ]
+    },
+    "clock": {
+        "timezone": "Etc/UTC",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format-alt": "{:%Y-%m-%d}"
     },
     "idle_inhibitor": {
         "format": "{icon}",
@@ -102,12 +145,7 @@
     },
     "tray": {
         // "icon-size": 21,
-        "spacing": 10
-    },
-    "clock": {
-        "timezone": "Etc/UTC",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+        "spacing": 4
     },
     "cpu": {
         "format": "{usage}% ",
@@ -143,174 +181,4 @@
             ""
         ]
     },
-    "battery": {
-        "full-at": 95,
-        "states": {
-            "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        "format-full": "",
-        "format-icons": [
-            "",
-            "",
-            "",
-            "",
-            ""
-        ]
-    },
-    // "battery#bat2": {
-    //     "bat": "BAT2"
-    // },
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
-    },
-    "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": [
-                "",
-                "",
-                ""
-            ]
-        },
-        "on-click": "pavucontrol"
-    },
-    "custom/media": {
-        "format": "{icon} {}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
-    }
 }
-// https://github.com/Alexays/Waybar/wiki/Configuration
-// {
-//     "layer": "top",
-//     "position": "bottom",
-//     "modules-left": [
-//         "sway/workspaces",
-//         "sway/mode"
-//     ],
-//     "modules-center": [],
-//     "modules-right": [
-//         "tray",
-//         /* "clock#date",  */
-//         "clock#time",
-//         /* "cpu",  */
-//         "pulseaudio",
-//         "network",
-//         "battery",
-//     ],
-//     "sway/workspaces": {
-//         "disable-scroll": true,
-//         "disable-click": false
-//     },
-//     "tray": {
-//         "spacing": 4,
-//         "icon-size": 10
-//     },
-//     "clock#date": {
-//         "format": " {:%e %b %Y}",
-//         "tooltip-format": "{:%e %B %Y}"
-//     },
-//     "clock#time": {
-//         "interval": 60,
-//         "format": "{:%H:%M}"
-//     },
-//     "cpu": {
-//         "format": " {usage}%"
-//     },
-//     "memory": {
-//         "format": " {}%"
-//     },
-//     "temperature": {
-//         "critical-threshold": 75,
-//         "format": " {temperatureC}°C"
-//     },
-//     "battery": {
-//         "bat": "BAT0",
-//         "full-at": 95,
-//         "states": {
-//             "good": 95,
-//             "warning": 30,
-//             "critical": 15
-//         },
-//         "format": "{icon}  {capacity}% ",
-//         "format-charging": "{icon}  {capacity}% ﮣ ",
-//         "format-plugged": "{icon}  {capacity}% ﮣ ",
-//         "format-full": "{icon} ",
-//         "format-icons": [
-//             "",
-//             "",
-//             "",
-//             "",
-//             ""
-//         ]
-//     },
-//     "network": {
-//         "format-wifi": " ",
-//         "tooltip-format-wifi": " {essid} {ipaddr} ({signalStrength}%)",
-//         "format-ethernet": " ",
-//         "tooltip-format-ethernet": "{ipaddr}",
-//         "format-disconnected": "睊"
-//     },
-//     "pulseaudio": {
-//         "format": "{format_source} {icon}",
-//         "format-muted": "",
-//         "format-source": "",
-//         // "format-source-muted": "",
-//         "format-source-muted": "",
-//         "tooltip-format": "{icon} {volume}%",
-//         "format-icons": {
-//             "headphone": "",
-//             "default": [
-//                 "",
-//                 ""
-//             ]
-//         },
-//         "on-click": "pavucontrol"
-//     },
-//     "sway/language": {
-//         "format": "⌨ {} "
-//     },
-//     "sway/mode": {
-//         "format": "<span>⚡️ {}</span>",
-//         "tooltip": false
-//     },
-//     "idle_inhibitor": {
-//         "format": "{icon}",
-//         "format-icons": {
-//             "activated": "",
-//             "deactivated": "🔓"
-//         }
-//     }
-// }
