chore(fonts): update fonts

--- a/home/private_dot_config/fontconfig/fonts.conf
+++ b/home/private_dot_config/fontconfig/fonts.conf
@@ -6,7 +6,6 @@
         <edit mode="assign" name="rgba">
             <const>rgb</const>
         </edit>
-        <!-- Should be enabled by default -->
         <edit mode="assign" name="hinting">
             <bool>true</bool>
         </edit>
@@ -21,20 +20,17 @@
         </edit>
     </match>
 
-
-    <!--use ubuntu fonts as default. -->
-
     <alias>
         <family>sans-serif</family>
         <prefer>
-            <family>Hack Nerd Font</family>
+            <family>Ubuntu Nerd Font</family>
         </prefer>
     </alias>
 
     <alias>
         <family>serif</family>
         <prefer>
-            <family>Hack Nerd Font</family>
+            <family>Ubuntu Nerd Font</family>
         </prefer>
     </alias>
 
