chore(fonts): install noto and update defaults

--- a/home/private_dot_config/fontconfig/fonts.conf
+++ b/home/private_dot_config/fontconfig/fonts.conf
@@ -23,14 +23,14 @@
     <alias>
         <family>sans-serif</family>
         <prefer>
-            <family>Ubuntu Nerd Font</family>
+            <family>NotoSans Nerd Font</family>
         </prefer>
     </alias>
 
     <alias>
         <family>serif</family>
         <prefer>
-            <family>Ubuntu Nerd Font</family>
+            <family>NotoSerif Nerd Font</family>
         </prefer>
     </alias>
 
