feat(fuzzel): add fuzzel

--- a/home/private_dot_config/sway/config
+++ b/home/private_dot_config/sway/config
@@ -16,7 +16,7 @@ set $term /usr/bin/alacritty
 # Note: pass the final command to swaymsg so that the resulting window
 # can be opened on the original workspace that the command was run on.
 # set $menu dmenu_path | dmenu | xargs swaymsg exec --
-set $menu albert toggle
+set $menu fuzzel
 
 # Colors
 set $base "#1e1e2e"
