--- a/home/private_dot_config/sway/config
+++ b/home/private_dot_config/sway/config
@@ -272,6 +272,20 @@ default_floating_border pixel
 client.unfocused $mantle $mantle $surface2 $text
 client.focused $surface2 $surface2 $text $surface2
 
+# GTK
+set $gnome-schema org.gnome.desktop.interface
+
+exec_always {
+    gsettings set $gnome-schema gtk-theme 'Catppuccin-Mocha-Standard-Blue-Dark'
+    gsettings set $gnome-schema icon-theme 'Tela-circle-Dark'
+    gsettings set $gnome-schema cursor-theme 'Catppuccin-cursors'
+    gsettings set $gnome-schema font-name 'sans-serif 10.5'
+    gsettings set $gnome-schema document-font-name 'sans-serif 10.5'
+    gsettings set $gnome-schema monospace-font-name 'monospace 10.5'
+    gsettings set $gnome-schema enable-animations false
+    import-gsettings
+}
+
 bar {
     swaybar_command waybar
 }
