--- a/home/private_dot_local/share/applications/io.podman_desktop.PodmanDesktop.desktop
+++ b/home/private_dot_local/share/applications/io.podman_desktop.PodmanDesktop.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Podman Desktop
-Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=run.sh --file-forwarding io.podman_desktop.PodmanDesktop --enable-features=UseOzonePlatform --ozone-platform=wayland @@u %U @@
+Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=run.sh --socket=wayland --file-forwarding io.podman_desktop.PodmanDesktop --enable-features=UseOzonePlatform --ozone-platform=wayland @@u %U @@
 Terminal=false
 Type=Application
 Icon=io.podman_desktop.PodmanDesktop
