--- a/home/private_dot_local/share/applications/org.signal.Signal.desktop
+++ b/home/private_dot_local/share/applications/org.signal.Signal.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Signal
-Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=signal-desktop --file-forwarding org.signal.Signal --enable-features=UseOzonePlatform --ozone-platform=wayland @@u %U @@
+Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=signal-desktop --socket=wayland --file-forwarding org.signal.Signal --enable-features=UseOzonePlatform --ozone-platform=wayland @@u %U @@
 Terminal=false
 Type=Application
 Icon=org.signal.Signal
