--- a/home/private_dot_local/share/applications/rest.insomnia.Insomnia.desktop
+++ b/home/private_dot_local/share/applications/rest.insomnia.Insomnia.desktop
@@ -1,13 +1,14 @@
 [Desktop Entry]
 Name=Insomnia
-Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=/app/bin/insomnia --file-forwarding rest.insomnia.Insomnia --enable-features=UseOzonePlatform --ozone-platform=wayland --no-sandbox @@u %U @@
+Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=/app/bin/insomnia --socket=wayland --file-forwarding rest.insomnia.Insomnia --no-sandbox --enable-features=UseOzonePlatform --ozone-platform=wayland @@u %U @@
 Terminal=false
 Type=Application
 Icon=rest.insomnia.Insomnia
 StartupWMClass=Insomnia
-X-AppImage-Version=2022.4.2
+X-AppImage-Version=2023.1.0
 Comment=The Collaborative API Design Tool
-MimeType=x-scheme-handler/insomnia;
 Categories=Development;
+Keywords=GraphQL;REST;gRPC;SOAP;openAPI;GitOps;
+MimeType=x-scheme-handler/insomnia;
 X-Flatpak-RenamedFrom=insomnia.desktop;
 X-Flatpak=rest.insomnia.Insomnia
