feat(sway): disable xwayland by default

--- a/home/private_dot_config/sway/config
+++ b/home/private_dot_config/sway/config
@@ -50,7 +50,7 @@ set $pink "#f5c2e7"
 set $flamingo "#f2cdcd"
 set $rosewater "#f5e0dc"
 
-# xwayland disable
+xwayland disable
 
 # ----------------------------------------------------------------------
 # --- Startup applications
