feat(tmux): update layout command

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -80,7 +80,7 @@ bind / command-prompt -p 'Man>' "split-window -d -h 'exec man %%'"
 bind R source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display "Configuration reloaded."
 
 # Custom layouts
-bind t run-shell tmux-side
+bind t run-shell 'bash -c "source ~/.config/shell/personal; tmux-side"'
 
 # ----------------------------------------------------------------------
 # --- Theme and status line
