--- a/home/private_dot_local/share/applications/private_org.mozilla.firefox.desktop
+++ b/home/private_dot_local/share/applications/private_org.mozilla.firefox.desktop
@@ -154,7 +154,6 @@ Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=firefox --file
 Icon=org.mozilla.firefox
 Terminal=false
 Type=Application
-MimeType=text/html;text/xml;application/xhtml+xml;application/vnd.mozilla.xul+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;
 StartupNotify=true
 Categories=Network;WebBrowser;
 Actions=new-window;new-private-window;profile-manager-window;
@@ -384,3 +383,4 @@ Name[de]=Profilverwaltung öffnen
 Name[es]=Abrir el Gestor de Perfiles
 Name[fr]=Ouvrir le gestionnaire de profils
 Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=firefox --socket=wayland org.mozilla.firefox --enable-features=UseOzonePlatform --ozone-platform=wayland --ProfileManager
+MimeType=x-scheme-handler/unknown;x-scheme-handler/about;text/html;text/xml;application/xhtml+xml;application/vnd.mozilla.xul+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;
