chore(tmux): update theme

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -115,17 +115,27 @@ pink="#f5c2e7"
 flamingo="#f2cdcd"
 rosewater="#f5e0dc"
 
-# Status
-set -g status "on"
-set -g status-interval 1
-set -g status-justify left
-set -g status-position top
-set -g status-style bg="${mantle}",fg="${text}"
+# Mode
+set -g mode-style bg="${blue}",fg="${mantle}"
+
+#Clock
+set -g clock-mode-colour "${blue}"
+set -g clock-mode-style 24
+
+# Panes
+set -g display-panes-colour "${text}"
+set -g display-panes-active-colour "${blue}"
+set -g pane-border-style bg="${mantle}",fg="${mantle}"
+set -g pane-active-border-style bg="${mantle}",fg="${mantle}"
+
+# Messages
+set -g message-style bg="${blue}",fg="${mantle}",align="centre"
+set -g message-command-style bg="${blue}",fg="${mantle}",align="centre"
 
 # Left status bar
 set -g status-left ""
 # set -g status-left " #S ❯ "
-set -g status-left-style bg="${surface2}",fg="${text}"
+set -g status-left-style bg="${mantle}",fg="${surface2}"
 set -g status-left-length "100"
 
 # Right status bar
@@ -133,22 +143,17 @@ set -g status-right "#(pomo) %A, %B %-e, %Y, %-l:%M:%S%p %Z "
 set -g status-right-style bg="${mantle}",fg="${text}"
 set -g status-right-length "100"
 
-# Modes
-setw -g mode-style bg="${surface2}",fg="${green}"
-setw -g clock-mode-colour "${green}"
-
-# Panes
-set -g pane-border-style bg="${mantle}",fg="${mantle}"
-set -g pane-active-border-style bg="${mantle}",fg="${mantle}"
-
-# Messages
-set -g message-style bg="${surface2}",fg="${green}",align="centre"
-set -g message-command-style bg="${surface2}",fg="${green}",align="centre"
+# Status
+set -g status "on"
+set -g status-interval 1
+set -g status-justify left
+set -g status-position top
+set -g status-style bg="${mantle}",fg="${text}"
 
 # Windows
-setw -g window-status-separator ""
-setw -g window-status-format " #{b:pane_current_path} "
-setw -g window-status-current-format " #{b:pane_current_path} "
-setw -g window-status-style bg="${mantle}",fg="${surface2}"
-setw -g window-status-current-style bg="${blue}",fg="${mantle}"
-setw -g window-status-activity-style bg="${mantle}",fg="${text}"
+set -g window-status-separator ""
+set -g window-status-format " #{b:pane_current_path} "
+set -g window-status-current-format " #{b:pane_current_path} "
+set -g window-status-style bg="${mantle}",fg="${surface2}"
+set -g window-status-current-style bg="${blue}",fg="${mantle}"
+set -g window-status-activity-style bg="${mantle}",fg="${text}"
