--- a/home/private_dot_config/sway/config
+++ b/home/private_dot_config/sway/config
@@ -56,6 +56,8 @@ xwayland disable
 # --- Startup applications
 exec mako
 exec gammastep
+exec nm-applet --indicator
+exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
 # ----------------------------------------------------------------------
 # --- Output configuration
@@ -134,12 +136,20 @@ bindsym $mod+$left focus left
 bindsym $mod+$down focus down
 bindsym $mod+$up focus up
 bindsym $mod+$right focus right
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
 
 # Move focused window in {direction}
 bindsym $mod+Shift+$left move left
 bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
 
 # Drag floating windows by holding down $mod and left mouse button.
 # Resize them with right mouse button + $mod. Despite the name, also
@@ -194,13 +204,13 @@ bindsym --release XF86Calculator exec --no-startup-id pactl set-source-mute @DEF
 # --- Layouts
 #
 # Create a horizontal|vertical split
-bindsym $mod+s splith
+bindsym $mod+b splith
 bindsym $mod+v splitv
 
 # Switch the current container between different layout styles
-# bindsym $mod+s layout stacking
-# bindsym $mod+w layout tabbed
-# bindsym $mod+e layout toggle split
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
 # Toggle fullscreen for current focus
 bindsym $mod+f fullscreen
@@ -209,7 +219,7 @@ bindsym $mod+f fullscreen
 bindsym $mod+Shift+Space floating toggle
 
 # Swap focus between the tiling area and the floating area
-# bindsym $mod+Space focus mode_toggle
+bindsym $mod+Space focus mode_toggle
 
 # Move focus to the parent container
 bindsym $mod+a focus parent
