--- a/home/private_dot_config/waybar/config
+++ b/home/private_dot_config/waybar/config
@@ -8,9 +8,11 @@
         "sway/scratchpad",
         "sway/mode",
     ],
+
     "modules-center": [
         "sway/window"
     ],
+
     "modules-right": [
         "pulseaudio",
         // "idle_inhibitor",
@@ -22,7 +24,7 @@
         "battery",
         "network",
         "tray",
-        "custom/clock",
+        "clock",
     ],
 
     // Modules configuration
@@ -44,6 +46,7 @@
             "default": ""
         }
     },
+
     "sway/window": {
         "format": "{}",
         "max-length": 50,
@@ -57,9 +60,11 @@
             "(.*) - Obsidian.*": "󰘝  $1",
         }
     },
+
     "sway/mode": {
         "format": "󰩨 {}"
     },
+
     "sway/scratchpad": {
         "format": "{icon}{count}",
         "show-empty": false,
@@ -71,11 +76,6 @@
         "tooltip-format": "{app}: {title}"
     },
 
-    "custom/clock": {
-        "exec": "echo 󱑎 $(date +'%-l:%M %p')",
-        "interval": 5
-    },
-
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         // "format-wifi": "{essid} ({signalStrength}%)  ",
@@ -84,12 +84,13 @@
         "tooltip-format": "{ifname} via {gwaddr} 󰩠",
         "format-linked": "{ifname} (No IP) 󰩠",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-alt": "󰖩 {essid}: {ipaddr}/{cidr}"
     },
+
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "{format_source} {volume}% {icon}",
-        "format-bluetooth": "{format_source} {volume}% {icon}",
+        "format": "{format_source} {icon} {volume}%",
+        "format-bluetooth": "{format_source} {icon} {volume}%",
         "format-bluetooth-muted": "{format_source} 󰖁 {icon}",
         "format-muted": "{format_source} 󰖁",
         "format-source": "",
@@ -109,6 +110,7 @@
         },
         "on-click": "pavucontrol"
     },
+
     "battery": {
         "full-at": 95,
         "states": {
@@ -116,10 +118,10 @@
             "warning": 30,
             "critical": 15
         },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% 󰢝",
-        "format-plugged": "{capacity}% 󰚥",
-        "format-alt": "{time} {icon}",
+        "format": "{icon} {capacity}%",
+        "format-charging": "󰢝 {capacity}%",
+        "format-plugged": "󰚥 {capacity}%",
+        "format-alt": "{icon} {time}",
         // "format-good": "", // An empty format will hide the module
         "format-full": "",
         "format-icons": [
@@ -135,11 +137,35 @@
             "󰁹"
         ]
     },
+
     "clock": {
         "timezone": "Etc/UTC",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+        "format": "{:%H:%M}",
+        "format-alt": " {:%A, %B %d, %Y (%R)} ",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt>{calendar}</tt>",
+        "calendar": {
+            "mode"          : "year",
+            "mode-mon-col"  : 3,
+            "weeks-pos"     : "right",
+            "on-scroll"     : 1,
+            "on-click-right": "mode",
+            "format": {
+                "months":     "<span color='#ffead3'><b>{}</b></span>",
+                "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+                "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+                "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+                "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+            }
+        },
+        "actions":  {
+            "on-click-right": "mode",
+            "on-click-forward": "tz_up",
+            "on-click-backward": "tz_down",
+            "on-scroll-up": "shift_up",
+            "on-scroll-down": "shift_down"
+        }
     },
+
     "idle_inhibitor": {
         "format": "{icon}",
         "format-icons": {
@@ -147,17 +173,21 @@
             "deactivated": ""
         }
     },
+
     "tray": {
         // "icon-size": 21,
         "spacing": 4
     },
+
     "cpu": {
-        "format": "{usage}% 󰻠",
+        "format": "󰻠 {usage}% ",
         "tooltip": false
     },
+
     "memory": {
-        "format": "{}% 󰍛"
+        "format": "󰍛 {}% "
     },
+
     "temperature": {
         // "thermal-zone": 2,
         // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
@@ -170,6 +200,7 @@
             ""
         ]
     },
+
     "backlight": {
         // "device": "acpi_video1",
         "format": "{percent}% {icon}",
