--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,6 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 max_line_length = 80
 
-[{*.yaml,*.yaml.tmpl,*.yml,*.yml.tmpl,package.json}]
+[{*.yaml,*.yaml.tmpl,*.yml,*.yml.tmpl}]
 indent_size = 2
 
