--- a/home/private_dot_config/sway/config
+++ b/home/private_dot_config/sway/config
@@ -18,6 +18,27 @@ set $term foot
 # set $menu dmenu_path | dmenu | xargs swaymsg exec --
 set $menu fuzzel
 
+# Workspaces
+set $workspace1   1
+set $workspace2   2
+set $workspace3   3
+set $workspace4   4
+set $workspace5   5
+set $workspace6   6
+set $workspace7   7
+set $workspace8   8
+set $workspace9   9
+set $workspace10  10
+set $workspaceF1  11
+set $workspaceF2  12
+set $workspaceF3  13
+set $workspaceF4  14
+set $workspaceF5  15
+set $workspaceF6  16
+set $workspaceF7  17
+set $workspaceF8  18
+set $workspaceF9  19
+set $workspaceF10 20
 # Colors
 set $base "#1e1e2e"
 set $mantle "#181825"
@@ -158,30 +179,28 @@ bindsym $mod+Shift+Right move right
 floating_modifier $mod normal
 
 # Switch to {workspace}
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
+bindsym $mod+1 workspace $workspace1
+bindsym $mod+2 workspace $workspace2
+bindsym $mod+3 workspace $workspace3
+bindsym $mod+4 workspace $workspace4
+bindsym $mod+5 workspace $workspace5
+bindsym $mod+6 workspace $workspace6
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
+bindsym $mod+9 workspace $workspace9
+bindsym $mod+0 workspace $workspace10
+bindsym $mod+F1 workspace $workspaceF1
+bindsym $mod+F2 workspace $workspaceF2
+bindsym $mod+F3 workspace $workspaceF3
+bindsym $mod+F4 workspace $workspaceF4
+bindsym $mod+F5 workspace $workspaceF5
+bindsym $mod+F6 workspace $workspaceF6
+bindsym $mod+F7 workspace $workspaceF7
+bindsym $mod+F8 workspace $workspaceF8
+bindsym $mod+F9 workspace $workspaceF9
+bindsym $mod+F10 workspace $workspaceF10
 
 # Move focused container to {workspace}
-# Note: workspaces can use strings instead of numbers for names.
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
-
 # System control
 bindsym $mod+Shift+p exec --no-startup-id flameshot gui
 bindsym XF86MonBrightnessDown exec brightnessctl -d gmux_backlight set 5%-
