--- a/home/private_dot_config/waybar/config
+++ b/home/private_dot_config/waybar/config
@@ -35,15 +35,27 @@
         "format-icons": {
             "1": "󰞷",
             "2": "󰈹",
-            "3": "󰒱",
-            "4": "󰊗",
-            "5": "󰙯",
-            "6": "󰘝",
-            "9": "󱁤",
-            "10": "󰢁",
-            "urgent": "",
-            "focused": "",
-            "default": ""
+            "3": "󰙯",
+            "4": "",
+            "5": "",
+            "6": "󰞷",
+            "7": "",
+            "8": "󰒱",
+            "9": "",
+            "10": "󰠮",
+            "11": "󱕵",
+            "12": "󰎆",
+            "13": "󱧶",
+            "14": "󰓓",
+            "15": "",
+            "16": "󱁤",
+            "17": "󱂇",
+            "18": "󰌓",
+            "19": "19",
+            "20": "",
+            // "focused": "",
+            // "default": "",
+            "urgent": ""
         }
     },
 
