--- a/home/private_dot_config/sway/config
+++ b/home/private_dot_config/sway/config
@@ -201,7 +201,27 @@ bindsym $mod+F9 workspace $workspaceF9
 bindsym $mod+F10 workspace $workspaceF10
 
 # Move focused container to {workspace}
-# System control
+bindsym $mod+Shift+1 move container to workspace $workspace1
+bindsym $mod+Shift+2 move container to workspace $workspace2
+bindsym $mod+Shift+3 move container to workspace $workspace3
+bindsym $mod+Shift+4 move container to workspace $workspace4
+bindsym $mod+Shift+5 move container to workspace $workspace5
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
+bindsym $mod+Shift+9 move container to workspace $workspace9
+bindsym $mod+Shift+0 move container to workspace $workspace10
+bindsym $mod+Shift+F1 move container to workspace $workspaceF1
+bindsym $mod+Shift+F2 move container to workspace $workspaceF2
+bindsym $mod+Shift+F3 move container to workspace $workspaceF3
+bindsym $mod+Shift+F4 move container to workspace $workspaceF4
+bindsym $mod+Shift+F5 move container to workspace $workspaceF5
+bindsym $mod+Shift+F6 move container to workspace $workspaceF6
+bindsym $mod+Shift+F7 move container to workspace $workspaceF7
+bindsym $mod+Shift+F8 move container to workspace $workspaceF8
+bindsym $mod+Shift+F9 move container to workspace $workspaceF9
+bindsym $mod+Shift+F10 move container to workspace $workspaceF10
+
 bindsym $mod+Shift+p exec --no-startup-id flameshot gui
 bindsym XF86MonBrightnessDown exec brightnessctl -d gmux_backlight set 5%-
 bindsym XF86MonBrightnessUp exec brightnessctl -d gmux_backlight set 5%+
