--- a/home/private_dot_config/sway/config
+++ b/home/private_dot_config/sway/config
@@ -39,6 +39,7 @@ set $workspaceF7  17
 set $workspaceF8  18
 set $workspaceF9  19
 set $workspaceF10 20
+
 # Colors
 set $base "#1e1e2e"
 set $mantle "#181825"
@@ -71,6 +72,8 @@ set $pink "#f5c2e7"
 set $flamingo "#f2cdcd"
 set $rosewater "#f5e0dc"
 
+# ----------------------------------------------------------------------
+# --- XWayland (enabled|disabled)
 # xwayland disable
 
 # ----------------------------------------------------------------------
@@ -83,16 +86,14 @@ exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSO
 # ----------------------------------------------------------------------
 # --- Output configuration
 #
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
+# Default wallpaper (more are available in /usr/share/backgrounds/sway/)
 output * bg ~/.local/share/wallpapers/space.png fill
 
 # Example configuration:
 #
 # output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
-# You can get the names of your outputs by running:
-# swaymsg -t get_outputs
-output eDP-1 resolution 2880x1800 scale 2
+# You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
 #
@@ -222,22 +223,26 @@ bindsym $mod+Shift+F8 move container to workspace $workspaceF8
 bindsym $mod+Shift+F9 move container to workspace $workspaceF9
 bindsym $mod+Shift+F10 move container to workspace $workspaceF10
 
+# Screenshot
 bindsym $mod+Shift+p exec --no-startup-id flameshot gui
-bindsym XF86MonBrightnessDown exec brightnessctl -d gmux_backlight set 5%-
+
+# Backlight
 bindsym XF86MonBrightnessUp exec brightnessctl -d gmux_backlight set 5%+
+bindsym XF86MonBrightnessDown exec brightnessctl -d gmux_backlight set 5%-
+
+# Multimedia
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_SINK@ toggle
-bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bindsym XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindsym XF86AudioRaiseVolume exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindsym XF86Search exec $menu
 
-# Push to talk
+# Global push to talk
 # (0=unmute, 1=mute, toggle=flip current state)
-bindsym XF86Calculator exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ 0
-bindsym --release XF86Calculator exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ 1
+bindsym XF86Launch5 exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ 0
+bindsym --release XF86Launch5 exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ 1
 
 # ----------------------------------------------------------------------
 # --- Layouts
